FIX: WidgetContainer was not showing the Settings area properly when an async postback happens inside the settings area. Problem was not loading the state right after LoadViewState is fired. FIX: Removed missing picture reference from CSS.

--- a/src/Dropthings/styles/Common.css
+++ b/src/Dropthings/styles/Common.css
@@ -1,6 +1,3 @@
-.widget_min {background-image:url('min_blue.gif');}
-.widget_max {background-image:url('max_blue.gif');}
-.widget_close {background-image:url('x_blue.gif');}
 .resizer_line { text-align: center; background-color: red; }
 .resizer_icon { }
 .widget_holder_panel_post_link {display:none}
